worked on physician appointments

--- a/src/app/appointment/schedule-appointment/modals/create-appointment/create-appointment.component.html
+++ b/src/app/appointment/schedule-appointment/modals/create-appointment/create-appointment.component.html
@@ -6,12 +6,16 @@
 </button>
 
 <h3 class="text-center mb-4">Book a appointment</h3>
-<form [formGroup]="appointmentForm" (ngSubmit)="createAppointment()">
+<form
+  *ngIf="user_role == 'Physician'"
+  [formGroup]="appointmentForm"
+  (ngSubmit)="createAppointment()"
+>
   <mat-form-field appearance="standard" class="w-100">
     <mat-label>Appointment for</mat-label>
     <mat-select
       formControlName="title"
-      (selectionChange)="getPhysician($event)"
+      (selectionChange)="getProviders($event)"
     >
       <mat-option
         *ngFor="let medication of medications"
@@ -64,4 +68,37 @@
       Submit
     </button>
   </div>
+</form>
+
+<form
+  [formGroup]="treatmentForm"
+  (ngSubmit)="SubmitTreatment()"
+  *ngIf="user_role == 'Patient'"
+>
+  <mat-form-field appearance="standard" class="w-100">
+    <mat-label>Treatment for</mat-label>
+    <mat-select formControlName="name">
+      <mat-option *ngFor="let treatment of treatments" [value]="treatment">
+        {{ treatment | titlecase }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <mat-form-field appearance="standard" class="w-100">
+    <mat-label>Physician</mat-label>
+    <mat-select formControlName="physician">
+      <mat-option *ngFor="let physician of physicians" [value]="physician">
+        {{ physician }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+  <button
+    class="my-4"
+    type="submit"
+    mat-raised-button
+    color="primary"
+    [disabled]="treatmentForm.invalid"
+  >
+    Submit
+  </button>
 </form>
