--- a/src/app/billing/components/billing/billing.component.html
+++ b/src/app/billing/components/billing/billing.component.html
@@ -28,11 +28,11 @@
     </ng-container>
 
     <ng-container matColumnDef="consultationFee">
-      <th mat-header-cell *matHeaderCellDef>Consultation</th>
+      <th mat-header-cell *matHeaderCellDef>Amount</th>
       <td mat-cell *matCellDef="let element">{{ element.consultationFee }}</td>
     </ng-container>
     <ng-container matColumnDef="paymentMethod">
-      <th mat-header-cell *matHeaderCellDef>Payment Method</th>
+      <th mat-header-cell *matHeaderCellDef>Payment For</th>
       <td mat-cell *matCellDef="let element">{{ element.paymentMethod }}</td>
     </ng-container>
     <ng-container matColumnDef="status">
