user role module

--- a/src/app/dashboard/admin-dashboard/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/dashboard/admin-dashboard/components/admin-dashboard/admin-dashboard.component.html
@@ -1,1 +1,47 @@
-<p>admin-dashboard works!</p>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb breadcumb-ol">
+    <li class="breadcrumb-item"><a href="#">Home</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Dashboard</li>
+  </ol>
+</nav>
+<div class="container">
+  <div class="row">
+    <div class="col demographics">
+      <div class="col-md-12">
+        <h4>Demographics</h4>
+      </div>
+    </div>
+    <div class="col medication">
+      <div class="col-md-12">
+        <h4>Medication</h4>
+      </div>
+    </div>
+
+    <div class="col billing">
+      <div class="col-md-12">
+        <h4>Billing</h4>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col immunization">
+      <div class="col-md-12">
+        <h4>Immunization</h4>
+      </div>
+    </div>
+    <div class="col plan">
+      <div class="col-md-12">
+        <h4>Plan Of Care</h4>
+      </div>
+    </div>
+    <div class="col profile">
+      <div class="col-md-12">
+        <h4>Profile</h4>
+      </div>
+    </div>
+  </div>
+  <br />
+  <mat-divider></mat-divider>
+  <br />
+  <div class="clearfix"></div>
+</div>
