--- a/src/app/core/components/layout/sidebar/sidebar.component.html
+++ b/src/app/core/components/layout/sidebar/sidebar.component.html
@@ -14,6 +14,16 @@
       <span>Dashboard</span>
     </a>
   </li>
+  <li class="nav-item">
+    <a
+      class="nav-link"
+      [routerLink]="['/dashboard/admin-dashboard/manage-users']"
+      routerLinkActive="active"
+    >
+      <mat-icon>user</mat-icon>
+      <span>Users</span>
+    </a>
+  </li>
   <mat-divider></mat-divider>
   <li class="nav-item">
     <a
