--- a/src/app/immunization-details/components/imm-details/imm-details.component.scss
+++ b/src/app/immunization-details/components/imm-details/imm-details.component.scss
@@ -1,55 +1,29 @@
-h4 {
-  color: #fff;
-}
-mat-card-header {
-  display: block;
-  font-weight: 500;
-}
-mat-form-field {
-  width: 100%;
-}
-.doses {
-  color: #18beb7;
-  font-weight: 700;
+.table-responsive {
+  .position {
+    position: relative;
+    padding: 10px;
+  }
+  h2 {
+    color: #fff;
+    font-size: 18px;
+  }
+  .mat-button {
+    float: right;
+    position: absolute;
+    right: 0;
+    top: 0px;
+  }
 }
 
-.dflex {
-  display: flex;
-  justify-content: space-between;
-  .field-label {
-    font-weight: bold;
-  }
+table {
+  width: 100%;
 }
-.message {
-  color: #18beb7;
-  text-align: center;
-  display: inherit;
-  font-size: 18px;
+
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
 }
-.number {
-  color: #18beb7;
-}
-.flex1 {
-  flex: 1;
-}
-.ml16 {
-  margin-left: 16px;
-}
-:host {
-  nav {
-    display: flex;
-    justify-content: space-between;
-    background: #e9ecef;
-    ol {
-      margin-bottom: 0;
-    }
-  }
-  ::ng-deep {
-    .bg-primary .mat-card-header-text {
-      margin: 0 8px;
-    }
-    .text-primary .mat-card-header-text {
-      margin: 0;
-    }
-  }
+
+td, th {
+  width: 25%;
 }
