added demographics and billing to physician and admin

--- a/src/app/core/components/layout/sidebar/sidebar.component.html
+++ b/src/app/core/components/layout/sidebar/sidebar.component.html
@@ -26,11 +26,19 @@
         <span>Medication</span>
       </a>
     </li>
+
+    <mat-divider></mat-divider>
+    <li class="nav-item menu-button">
+      <a class="nav-link" [routerLink]="['/appointments/schedule-appointment']">
+        <mat-icon>calendar_today</mat-icon>
+        <span>Appointments</span>
+      </a>
+    </li>
     <mat-divider></mat-divider>
     <li class="nav-item">
       <a
         class="nav-link"
-        [routerLink]="['/demographics']"
+        [routerLink]="['/demographics/view']"
         routerLinkActive="active"
       >
         <mat-icon>graphic_eq</mat-icon>
@@ -38,10 +46,10 @@
       </a>
     </li>
     <mat-divider></mat-divider>
-    <li class="nav-item menu-button">
-      <a class="nav-link" [routerLink]="['/appointments/schedule-appointment']">
-        <mat-icon>calendar_today</mat-icon>
-        <span>Appointments</span>
+    <li class="nav-item">
+      <a class="nav-link" [routerLink]="['/billing']" routerLinkActive="active">
+        <mat-icon>payment</mat-icon>
+        <span>Billing</span>
       </a>
     </li>
   </ul>
@@ -69,6 +77,24 @@
       >
         <mat-icon>local_hospital</mat-icon>
         <span>Medication</span>
+      </a>
+    </li>
+    <mat-divider></mat-divider>
+    <li class="nav-item">
+      <a
+        class="nav-link"
+        [routerLink]="['/demographics/view']"
+        routerLinkActive="active"
+      >
+        <mat-icon>graphic_eq</mat-icon>
+        <span>Demographics</span>
+      </a>
+    </li>
+    <mat-divider></mat-divider>
+    <li class="nav-item">
+      <a class="nav-link" [routerLink]="['/billing']" routerLinkActive="active">
+        <mat-icon>payment</mat-icon>
+        <span>Billing</span>
       </a>
     </li>
   </ul>
