user active inactive

--- a/src/app/dashboard/admin-dashboard/components/manage-users/manage-users.component.html
+++ b/src/app/dashboard/admin-dashboard/components/manage-users/manage-users.component.html
@@ -39,7 +39,7 @@
               <!-- Material checked -->
               <div class="custom-control custom-switch custom-switch-md">
                 <input
-                  (change)="toggleEditable($event)"
+                  (change)="toggleEditable($event, u)"
                   type="checkbox"
                   class="custom-control-input"
                   id="{{ u.id }}"
