--- a/src/app/core/components/layout/sidebar/sidebar.component.html
+++ b/src/app/core/components/layout/sidebar/sidebar.component.html
@@ -46,6 +46,17 @@
       </a>
     </li>
     <mat-divider></mat-divider>
+    <li class="nav-item menu-button">
+      <a
+        class="nav-link"
+        routerLinkActive="active"
+        routerLink="./immunization-details"
+      >
+        <mat-icon>info</mat-icon>
+        <span>Immunization</span>
+      </a>
+    </li>
+    <mat-divider></mat-divider>
     <li class="nav-item">
       <a class="nav-link" [routerLink]="['/billing']" routerLinkActive="active">
         <mat-icon>payment</mat-icon>
