--- a/src/app/immunization-details/components/imm-details/imm-details.component.scss
+++ b/src/app/immunization-details/components/imm-details/imm-details.component.scss
@@ -24,6 +24,12 @@ table {
   width: 100%;
 }
 
-td, th {
+td,
+th {
   width: 25%;
+}
+@media screen and (max-width: 768px) {
+  .mobile-width {
+    width: 600px;
+  }
 }
