--- a/src/app/immunization-details/components/imm-details/imm-details.component.html
+++ b/src/app/immunization-details/components/imm-details/imm-details.component.html
@@ -15,6 +15,8 @@
       <thead>
         <tr>
           <th scope="column" *ngFor="let col of columns">{{ col }}</th>
+          <th scope="column">Vaccine Date1</th>
+          <th scope="column">Vaccine Date2</th>
         </tr>
       </thead>
       <tbody>
@@ -23,6 +25,8 @@
             <td scope="row" *ngFor="let col of index">
               {{ user[col] }}
             </td>
+            <td>{{ user.date | date: "dd-MM-yyyy" }}</td>
+            <td>{{ user.date1 | date: "dd-MM-yyyy" }}</td>
           </ng-container>
         </tr>
       </tbody>
